--- a/C&S/AS2/index.html
+++ b/C&S/AS2/index.html
@@ -116,16 +116,17 @@
             </p>
         </section>
 
-
-
-
-
-
-
-
-
-
-
+        <section>
+            <h1>Bibliografia</h1>
+            <p>
+              <ul>
+                    <li><a href="https://pt.wikipedia.org/wiki/Fortran">FORTRAN - Wikipedia</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=_Cc1HHPZY-w#:~:text=documentado%20a%20primeira%20mudan%C3%A7a%20na,por%20manter%20o%20neg%C3%B3cio%20funciona.">
+                        Nintendo - Video do TecMundo
+                    </a></li>
+              </ul>
+        </p>
+        </section>
 
     </main>
 </body>
