--- a/CS/AS2/index.html
+++ b/CS/AS2/index.html
@@ -116,6 +116,23 @@
             </p>
         </section>
 
+
+        <section>
+            <h1>Von Neumann e o EDVAC</h1>
+            <p>
+                <ul>
+                <li>John von Neumann desenvolveu a lógica de
+    circuitos, o conceito de programa armazenado e o uso de
+    operações digitais binárias usados até hoje</li>
+                <li>EDVAC é o primeiro computador a usar a
+    arquitetura de von Neumann. Pesava 7.850 kg e
+    ocupava  45.5 m²</li>
+                <img src="imagens/edvac-neumann.jpg" alt="">
+            </ul>
+        </p>
+        </section>
+
+
         <section>
             <h1>Bibliografia</h1>
             <p>
@@ -124,9 +141,14 @@
                     <li><a href="https://www.youtube.com/watch?v=_Cc1HHPZY-w#:~:text=documentado%20a%20primeira%20mudan%C3%A7a%20na,por%20manter%20o%20neg%C3%B3cio%20funciona.">
                         Nintendo - Video do TecMundo
                     </a></li>
+                    <li><a href="https://pt.wikipedia.org/wiki/EDVAC#:~:text=EDVAC%20fisicamente%20possu%C3%ADa%20quase%206.000,%C3%A1rea%20e%20pesava%207.850%20kg.">
+                        EDVAC - Wikipedia
+                    </a></li>
               </ul>
         </p>
         </section>
+
+        
 
     </main>
 </body>
